--- a/src/results.html
+++ b/src/results.html
@@ -110,11 +110,11 @@
     </tr>
     <tr>
       <td>Sample 1 (Absolutely)</td>
-      <td><audio controls><source src="/Audio/Absolutely_TS.wav" type="audio/mpeg">Your browser does not support the audio element.</audio></td>
-      <td><audio controls><source src="/Audio/Absolutely_Microphone_NM.wav" type="audio/mpeg">Your browser does not support the audio element.</audio></td>
-      <td><audio controls><source src="/Audio/Absolutely_Microphone_WM.wav" type="audio/mpeg">Your browser does not support the audio element.</audio></td>
-      <td><audio controls><source src="/Audio/Absolutely_Generated.wav" type="audio/mpeg">Your browser does not support the audio element.</audio></td>
-      <td><audio controls><source src="Audio/Absolutely_Enhanced.wav" type="audio/mpeg">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="Audio/Absolutely_TS.wav" type="audio/mpeg">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="Audio/Absolutely_Microphone_NM.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="Audio/Absolutely_Microphone_WM.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="Audio/Absolutely_Generated.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="Audio/Absolutely_Enhanced.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
     </tr>
     <tr>
       <td>Sample 2 (Celebrate)</td>
