--- a/src/results.html
+++ b/src/results.html
@@ -118,19 +118,19 @@
     </tr>
     <tr>
       <td>Sample 2 (Celebrate)</td>
-      <td><audio controls><source src="/Audio/Celebrate_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
-      <td><audio controls><source src="/Audio/Celebrate_Microphone_NM.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
-      <td><audio controls><source src="/Audio/Celebrate_Microphone_WM.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
-      <td><audio controls><source src="/Audio/Celebrate_Generated.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
-      <td><audio controls><source src="/Audio/Celebrate_Enhanced.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="../Audio/Celebrate_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="../Audio/Celebrate_Microphone_NM.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="../Audio/Celebrate_Microphone_WM.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="../Audio/Celebrate_Generated.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="../Audio/Celebrate_Enhanced.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
     </tr>
     <tr>
       <td>Sample 3 (University)</td>
-      <td><audio controls><source src="/Audio/University_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
-      <td><audio controls><source src="/Audio/University_Microphone_NM.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
-      <td><audio controls><source src="/Audio/University_Microphone_WM.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
-      <td><audio controls><source src="/Audio/University_Generated.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
-      <td><audio controls><source src="/Audio/University_Enhanced.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="../Audio/University_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="../Audio/University_Microphone_NM.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="../Audio/University_Microphone_WM.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="../Audio/University_Generated.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="../Audio/University_Enhanced.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
     </tr>
   </table>
   <div class="section-divider"></div>
@@ -139,85 +139,85 @@
   <div class="audio-row">
     <div class="audio-cell">
       <p>Throat Sensor-Left Jaw</p>
-      <audio controls><source src="/Audio/Left_Jaw_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Left_Jaw_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
     <div class="audio-cell">
       <p>Generated Audio (Left Jaw)</p>
-      <audio controls><source src="/Audio/Left_Jaw_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Left_Jaw_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
     <div class="audio-cell">
       <p>Throat Sensor-Right Jaw</p>
-      <audio controls><source src="/Audio/Right_Jaw_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Right_Jaw_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
     <div class="audio-cell">
       <p>Generated Audio (Right Jaw)</p>
-      <audio controls><source src="/Audio/Right_Jaw_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Right_Jaw_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
   </div>
   <div class="audio-row">
     <div class="audio-cell">
       <p>Throat Sensor-Left Neck</p>
-      <audio controls><source src="/Audio/Left_Neck_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Left_Neck_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
     <div class="audio-cell">
       <p>Generated Audio (Left Neck)</p>
-      <audio controls><source src="/Audio/Left_Neck_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Left_Neck_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
     <div class="audio-cell">
       <p>Throat Sensor-Right Neck</p>
-      <audio controls><source src="/Audio/Right_Neck_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Right_Neck_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
     <div class="audio-cell">
       <p>Generated Audio (Right Neck)</p>
-      <audio controls><source src="/Audio/Right_Neck_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Right_Neck_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
   </div>
   <div class="section-divider"></div>
 
   <h3>Throat Signal Collection and Speech Reconstruction in Different Noise Environments</h3>
   <div class="audio-row">
-    <span class="sample-label">Sample 1 (Approch)</span>
+    <span class="sample-label">Sample 1 (Approach)</span>
     <div class="audio-cell">
       <p>City Noise - Throat Sensor</p>
-      <audio controls><source src="/Audio/City_Noise_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/City_Noise_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
     <div class="audio-cell">
       <p>City Noise - Generated Audio</p>
-      <audio controls><source src="/Audio/City_Noise_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/City_Noise_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
     <div class="audio-cell">
       <p>City Noise - Microphone</p>
-      <audio controls><source src="/Audio/City_Noise_MS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/City_Noise_MS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
   </div>
   <div class="audio-row">
-    <span class="sample-label">Sample 2 (Approch)</span>
+    <span class="sample-label">Sample 2 (Approach)</span>
     <div class="audio-cell">
       <p>Indoor Noise - Throat Sensor</p>
-      <audio controls><source src="/Audio/Indoor_Noise_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Indoor_Noise_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
     <div class="audio-cell">
       <p>Indoor Noise - Generated Audio</p>
-      <audio controls><source src="/Audio/Indoor_Noise_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Indoor_Noise_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
     <div class="audio-cell">
       <p>Indoor Noise - Microphone</p>
-      <audio controls><source src="/Audio/Indoor_Noise_MS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Indoor_Noise_MS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
   </div>
   <div class="audio-row">
-    <span class="sample-label">Sample 3 (Approch)</span>
+    <span class="sample-label">Sample 3 (Approach)</span>
     <div class="audio-cell">
       <p>Music Noise - Throat Sensor</p>
-      <audio controls><source src="/Audio/Music_Noise_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Music_Noise_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
     <div class="audio-cell">
       <p>Music Noise - Generated Audio</p>
-      <audio controls><source src="/Audio/Music_Noise_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Music_Noise_GS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
     <div class="audio-cell">
       <p>Music Noise - Microphone</p>
-      <audio controls><source src="/Audio/Music_Noise_MS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
+      <audio controls><source src="../Audio/Music_Noise_MS.wav" type="audio/wav">Your browser does not support the audio element.</audio>
     </div>
   </div>
   <div class="section-divider"></div>
