--- a/src/results.html
+++ b/src/results.html
@@ -15,17 +15,22 @@
     }
     header {
       display: flex;
-      justify-content: space-between;
       align-items: center;
       padding: 20px;
       background: #f4f4f4;
       border-bottom: 2px solid #e4e4e4;
     }
+    header img {
+      height: 50px; /* 根据需要调整图片的高度 */
+      margin-right: 15px; /* 图片和标题之间的间距 */
+    }
     header h1 {
       margin: 0;
+      font-size: 24px;
     }
     header nav {
       display: flex;
+      margin-left: auto;
     }
     header nav a {
       margin-left: 20px;
@@ -89,6 +94,7 @@
 </head>
 <body>
 <header>
+  <img src="../img/CityU_logo.png" alt="CityU Logo">
   <h1>Results</h1>
   <nav>
     <a href="index.html">Home</a>
@@ -110,7 +116,7 @@
     </tr>
     <tr>
       <td>Sample 1 (Absolutely)</td>
-      <td><audio controls><source src="../Audio/Absolutely_TS.wav" type="audio/mpeg">Your browser does not support the audio element.</audio></td>
+      <td><audio controls><source src="../Audio/Absolutely_TS.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
       <td><audio controls><source src="../Audio/Absolutely_Microphone_NM.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
       <td><audio controls><source src="../Audio/Absolutely_Microphone_WM.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
       <td><audio controls><source src="../Audio/Absolutely_Generated.wav" type="audio/wav">Your browser does not support the audio element.</audio></td>
